--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <p align="center"> Kunru Lu </p>
 
-logo: "/images/Professional Pic.png?raw=true"
+logo: "/images/Professional Pic.png"
 
 description:
   <p align="center">
