--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,10 @@ logo: "/images/pic.png?raw=true"
 
 description:
   <p align="center">
-  <a href="https://carajumpshigh.github.io/Resume/">Resume</a> |
+  <a href="https://github.com/carajumpshigh/kunrulu.github.io/blob/master/Kunru%20Lu-Resume.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/lukunru">LinkedIn</a> |
   <a href="https://github.com/carajumpshigh">GitHub</a>
+  <a href="https://medium.com/@kl3743">Medium</a>
   </p>
   
   
